<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class PriceGroups extends Model
{
    //
}
